samples/_failures_safe/1761716553_8a6071_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b62cb5e8.c: In function ‘main’:
./samples/SAFE/__tmp_b62cb5e8.c:150:12: error: expected ‘)’ at end of input
  150 |     if (len
      |        ~   ^
      |            )
./samples/SAFE/__tmp_b62cb5e8.c:150:5: error: expected declaration or statement at end of input
  150 |     if (len
      |     ^~
